--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -10,16 +10,21 @@
 
 <body>
   <div class="items">
+    <div class="item">
+      <img src="https://picsum.photos/200" />
     <p>Hi I'm a item</p>
-    <div>
+    </div>
+    <div class="item item2">
+      <img src="https://picsum.photos/200" />
       <h2>Sub Div</h2>
       <p>Hi I'm a item</p>
-
     </div>
-    <img src="https://source.unsplash.com/random/300x300" />
-    <p>Hi I'm a item</p>
-    <p>Hi I'm a item</p>
+    <article class="item">
+      <h2>Im and article</h2>
+    </article>
   </div>
+
+  <script src="./the-dom.js"></script>
 </body>
 
 </html>
