--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -16,11 +16,15 @@
     </div>
     <div class="item item2">
       <img src="https://picsum.photos/200" />
-      <h2>Sub Div</h2>
+      <h2>
+        I am a heading
+        <span>I am hidden!</span>
+      </h2>
       <p>Hi I'm a item</p>
     </div>
     <article class="item">
       <h2>Im and article</h2>
+      <p class="pizza">This is how many pizzas I ate!</p>
     </article>
   </div>
 
