--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -9,9 +9,14 @@
 </head>
 
 <body>
+
+  <img class="nice cool" src="https://picsum.photos/600" />
+
   <div class="items">
     <div class="item">
-      <img src="https://picsum.photos/200" />
+      <img class= "custom" data-name="felicia" data-last= "brenner" src="https://picsum.photos/200" />
+      <img data-name="wes" src="https://picsum.photos/200" />
+      <img data-name="andrew" src="https://picsum.photos/200" />
     <p>Hi I'm a item</p>
     </div>
     <div class="item item2">
@@ -27,6 +32,17 @@
       <p class="pizza">This is how many pizzas I ate!</p>
     </article>
   </div>
+  <style>
+    h2 span {
+      display: none;
+    }
+
+    .round {
+      border-radius: 50%;
+      transform: rotate(20deg) scale(2);
+      box-shadow: 10px 0 0 burlywood;
+    } 
+  </style>
 
   <script src="./the-dom.js"></script>
 </body>
