--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -28,7 +28,7 @@
       <p>Hi I'm a item</p>
     </div>
     <article class="item">
-      <h2>Im and article</h2>
+      <h2>Im an article</h2>
       <p class="pizza">This is how many pizzas I ate!</p>
     </article>
   </div>
@@ -44,7 +44,7 @@
     } 
   </style>
 
-  <script src="./the-dom.js"></script>
+  <script src="./creating.js"></script>
 </body>
 
 </html>
