--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -44,7 +44,7 @@
     } 
   </style>
 
-  <script src="./creating.js"></script>
+  <script src="./creating-with-strings.js"></script>
 </body>
 
 </html>
