--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -10,6 +10,8 @@
 
 <body>
 
+  <p class="wes">I am Wes, I <em>love</em>to bbq</p>
+
   <img class="nice cool" src="https://picsum.photos/600" />
 
   <div class="items">
@@ -44,7 +46,7 @@
     } 
   </style>
 
-  <script src="./creating-with-strings.js"></script>
+  <script src="./traversing.js"></script>
 </body>
 
 </html>
