Added a button and a event listener.

--- a/exercises/29 - Events/events.html
+++ b/exercises/29 - Events/events.html
@@ -6,10 +6,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>JavaScript Events</title>
   <link rel="stylesheet" href="../../base.css">
+  <style>
+    .butts {
+      margin-left: 20px;
+      padding-left: 40px;
+
+    }
+  </style>
 </head>
 
 <body>
+  <button class="butts">I like Big</button>
 
+  <script src="./events.js"></script>
 </body>
 
 </html>
