--- a/exercises/29 - Events/events.html
+++ b/exercises/29 - Events/events.html
@@ -18,17 +18,18 @@
 <body>
   <button class="butts">I like Big</button>
   <button class="cool">Click me Also!</button>
-  <h2>Buy Buttons</h2>
-  <button class="buy">Buy Item 1</button>
-  <button class="buy">Buy Item 2</button>
-  <button class="buy">Buy Item 3</button>
-  <button class="buy">Buy Item 4</button>
-  <button class="buy">Buy Item 5</button>
-  <button class="buy">Buy Item 6</button>
-  <button class="buy">Buy Item 7</button>
-  <button class="buy">Buy Item 8</button>
-  <button class="buy">Buy Item 9</button>
-  <button class="buy">Buy Item 10</button>
+
+  <h2>Buy Buttons!</h2>
+  <button data-price= "100" class="buy">Buy Item 1</button>
+  <button data-price= "200" class="buy">Buy Item 2</button>
+  <button data-price= "300" class="buy">Buy Item 3</button>
+  <button data-price= "400" class="buy">Buy Item 4</button>
+  <button data-price= "500" class="buy">Buy Item 5</button>
+  <button data-price= "600" class="buy">Buy Item 6</button>
+  <button data-price= "700" class="buy">Buy Item 7</button>
+  <button data-price= "800" class="buy">Buy Item 8</button>
+  <button data-price= "900" class="buy">Buy Item 9</button>
+  <button data-price= "1000" class="buy">Buy Item 10</button>
 
   <script src="./events.js"></script>
 </body>
