Added code on capure and bubble phases. Put in stopPropagation to stop either phase to happen. Added console.log event.type and event.bubbles. Put in difference between current target and this. Added an image to the HTML and added notes to the md file.

--- a/exercises/29 - Events/events.html
+++ b/exercises/29 - Events/events.html
@@ -31,6 +31,8 @@
   <button data-price= "900" class="buy">Buy Item 9</button>
   <button data-price= "1000" class="buy">Buy Item 10</button>
 
+  <img class="photo" src="https://picsum.photos/200" alt="Nice!">
+
   <script src="./events.js"></script>
 </body>
 
