--- a/exercises/29 - Events/forms.html
+++ b/exercises/29 - Events/forms.html
@@ -10,10 +10,11 @@
 
 <body>
   <div class="wrapper">
-
+    <a class="wes" href="https://wesbos.com">Wes Bos</a>
     <form name="signup">
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" value="Wes Bos">
+      <input type="text" id="name" name="name" value="Wes Bos"> 
+      <!-- default value is the value put in a form before the user puts a value in.  -->
       <label for="email">Email</label>
       <input type="email" id="email" name="email" value="wesbos@gmail.com">
       <input type="checkbox" id="agree" name="agree">
