--- a/exercises/29 - Events/forms.html
+++ b/exercises/29 - Events/forms.html
@@ -23,6 +23,9 @@
       <button type="submit">Submit</button>
     </form>
   </div>
+
+  <img class="photo" src="https://picsum.photos/200" alt="Nice"
+
   <script src="./forms.js"></script>
 </body>
 
