added accesibilty to the photo on the website.

--- a/exercises/29 - Events/forms.html
+++ b/exercises/29 - Events/forms.html
@@ -23,9 +23,9 @@
       <button type="submit">Submit</button>
     </form>
   </div>
-
-  <img class="photo" src="https://picsum.photos/200" alt="Nice"
-
+  <div role="button" tabindex="0">button using tab</div> 
+  <img class="photo" tableindex="0" src="https://picsum.photos/200" alt="Nice">
+<!-- Using tabindex will allow add the element to the flow and allow user to tab to that element. -->
   <script src="./forms.js"></script>
 </body>
 
