--- a/exercises/35 - Scroll To Accept/scroll-to-accept.html
+++ b/exercises/35 - Scroll To Accept/scroll-to-accept.html
@@ -28,7 +28,7 @@
         minima. Labore sit quos voluptatem illum qui. Veritatis quis a mollitia asperiores repudiandae consequatur
         assumenda, at tempora, modi voluptate sit blanditiis hic dignissimos harum consequuntur quia ipsam, architecto
         nesciunt. Praesentium, mollitia? Delectus quod laudantium doloremque nihil?</p>
-      <strong class="watch">watch for me</strong>
+      <strong class="watch">Now You See ME!</strong>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ab, ea inventore commodi eligendi error
         repellat impedit eum quod enim sequi, distinctio, qui eaque ipsam fugit asperiores eos laboriosam ex.</p>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa id debitis ex eligendi rem unde consequuntur
@@ -42,7 +42,8 @@
         at laborum eaque, modi voluptas aut! Quam nihil deleniti velit excepturi, quidem, veniam aut doloremque iure
         reprehenderit natus vel quia iusto? Magni veritatis provident libero hic quisquam, perferendis officia quasi
         molestiae sit sunt fugiat, perspiciatis architecto velit unde molestias ratione totam, atque doloremque!</p>
-    </div>
+        <hr>
+      </div>
     <!--
       autocomplete="off" adresses an issue with firefox
       where the browser will persist dynamic disabled state
