--- a/playground/if-statements/if-statements.html
+++ b/playground/if-statements/if-statements.html
@@ -10,15 +10,49 @@
 
 <body>
   <script>
-    // If the original if statement is true, all of the else if statements will be skipped. 
-    // If you are looking to search each of the true statements you need make 3 seperate if statements. 
-    if (10 > 2) {
-      console.log('Yep 1');
-    } else if (11 > 10) {
-      console.log('Yep 2');
-    } else if (3 > 1) {
-      console.log('Yep 3');
+    // If there is multiple statements that could be true be carefule of the order you put in. 
+    const age = 50;
+    if (age > 70) {
+      console.log('In your seventies');
+    } else if (age > 60) {
+      console.log('In Your sixties');
+    } else if (age > 50) {
+      console.log('In your fifties');
+    } else {
+      console.log('Nothing was true');
     }
+
+    // function takes in a sentence, boolean-true or false statement. 
+    function slugify(sentence, lowercase) {
+      let slug = sentence.replace(/\s/g, '-');
+      if (lowercase) {
+         return slug.toLowerCase();
+      } 
+      // else can get rid of brackets. 
+        return slug;
+    }
+
+    const name = 'wes';
+    const last = 'bos';
+    
+
+  if (name === 'scott' || (name === 'wes' && last === 'bos')) {
+    console.log('Coool Name!');
+  }
+
+  const isAwesomeName = 'awesome'.includes(name);
+  if (isAwesomeName) {
+    console.log('Super Cool Name Bro!!');
+  }
+  
+  function nameIsAwesome(name) {
+    return 'awesome'.includes(name);
+  }
+
+  // if (nameIsAwesome('wes')) {
+  //   console.log('COOL NAME WES!!');
+  // }
+
   </script>
 </body>
 
