Cleared the console from if statement video, and noted out all text from previous video.

--- a/playground/if-statements/if-statements.html
+++ b/playground/if-statements/if-statements.html
@@ -9,25 +9,25 @@
 </head>
 
 <body>
-  * empty array 
+  <!-- * empty array 
   * empty object
 
   <h2>Truthy Values</h2>
-  <!-- These equate to true -->
+  These equate to true
   * 1
   * -10
   * array with numbers
   * full string
-  * a string of "0"
-  <!-- All strings besides a string of nothing is truthy -->
+  * a string of "0" 
+  All strings besides a string of nothing is truthy
 
   <h2>Falsy Values</h2>
-  <!-- These equate to false -->
-  * 0 
+  These equate to false 
+   * 0 
   * undefined variable
   * Variable set to null
-  * a variable set to `"hello" - 10` NaN <!-- NaN not a number -->
-  * empty string
+  * a variable set to `"hello" - 10` NaN- NaN not a number
+  * empty string -->
 
   <script>
     // If there is multiple statements that could be true be carefule of the order you put in. 
@@ -117,6 +117,8 @@
     }
   });
   console.groupEnd();
+
+  console.clear();
 
   </script>
 </body>
