--- a/playground/switch-statements/switch-statements.html
+++ b/playground/switch-statements/switch-statements.html
@@ -8,13 +8,46 @@
   <link rel="stylesheet" href="../base.css">
 </head>
 
-<img width="200" src="./turtle.png" alt="Turt" class="turt">
-<body>
 
+<body>
+  <style>
+    .turt {
+      position: relative;
+      --x: 10px;
+      --y: 10px;
+      transform: translateX(var(--x)) translateY(var(--y));
+    }
+  </style>
+<img width="200" src="./turtle.png" alt="Turtle" class="turt">
   <script>
     const turtle = document.querySelector('.turt');
+    let x = 0;
+    let y = 0;
     function handleKeyDown(event) {
-      console.log(event.key);
+      // If its not an arrow key, we dont care.
+      if (!event.key.includes('Arrow')) { return; }
+      switch (event.key) {
+        case 'ArrowUp': 
+        y = y + 1;
+        break; 
+        case 'ArrowDown': 
+        y = y - 1;
+        break;
+        case 'ArrowLeft': 
+        x = x - 1;
+        break;
+        case 'ArrowRight': 
+        x = x + 1;
+        break; 
+        default:
+          console.log('That is not a valid move');
+          break;
+      }
+      // same thing
+      // turtle.style.background = 'red';
+      turtle.style['background'] = 'red';
+
+      turtle.setAttribute('style', `--x: ${x}px; --y: ${y}px;`);
     }
     window.addEventListener('keydown', handleKeyDown);
   </script>
