remade the switch statement HTML since I could not figure out what was wrong the first time. Put the turtle into a x and y axis position.

--- a/playground/switch-statements/switch-statements-FINISHED.html
+++ b/playground/switch-statements/switch-statements-FINISHED.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title></title>
-  <link rel="stylesheet" href="../base.css">
+  <link rel="stylesheet" href="../../base.css">
 </head>
 
 
@@ -56,7 +56,7 @@
           console.log('That is not a valid move');
           break;
       }
-
+      
       turtle.setAttribute('style', `
         --rotateX: ${flipped ? '180deg' : '0'};
         --x: ${x * speed}px;
