added minor note on the importance of forEach and Map differences

--- a/playground/maps.html
+++ b/playground/maps.html
@@ -53,6 +53,8 @@
     // delete()
     //  in cosole myMap.delete('name')
 
+    // *** Difference between For Each and Maps. ***
+
   </script>
 </body>
 
