--- a/exercises/46 - Arrays/array-loopings-methods-START.html
+++ b/exercises/46 - Arrays/array-loopings-methods-START.html
@@ -128,8 +128,114 @@
     /*
       Looping Methods
     */
+   // When you loop with For each does not return any items. It just does some work without returning any information.
 
-  </script>
+
+    function logTopping(topping, index, originalArray) {
+      const nextTopping = originalArray[index + 1];
+      const prevTopping = originalArray[index - 1];
+      // log the topping
+      console.log(topping);
+      // Long the previous topping if there is one. 
+      prevTopping ? console.log(prevTopping) : null;
+      // log the next topping if there is one. 
+      nextTopping ? console.log(nextTopping) : null;
+
+      // if its the last item in the array, say goodbye. 
+      index === originalArray.length - 1 // If the index is the length of the original array - 1
+      ? console.log('Goodbye') // ? true statement
+      : console.log('Getting the next topping'); // false
+
+      // index === originalArray.length && console.log('Goodbye'); can be used as a hack. Wheneve the first statement before the && is true it will move on to the second statement. 
+
+      console.log('zzzzzzzaaaaaaaaaaaaaaa');
+    }
+
+    toppings.forEach(logTopping);
+
+    // Map, Filter, Reduce
+    console.clear();
+
+    // Maps will always stay the same length. 
+
+    function addArms(faces) {
+      return `hi ${faces}`;
+    }
+
+    const toys = faces.map(addArms); // Added the arm function to each item in the array.
+
+    console.log(toys);
+    // Transforms the data in some way
+    // Strings are similar to arrays when it comes to the number. The first letten in a string will be 0. 
+
+    function brennify(name) {
+      return `${name} Brenner`;
+    }
+
+    function capitalize(word) {
+      return `${word[0].toUpperCase()}${word.slice(1)}`;
+    }
+    
+    // You can attach multiple maps on each other
+    const fullNames = ['felicia', 'andrew', 'houdini', 'ducky']
+    .map(capitalize) // No semicolon until end of the chain. 
+    .map(brennify);
+    // console.log(fullNames);
+
+    const gameGroup = ['felicia', 'andrew', 'anna', 'dan', 'justin']
+    .map(name => `${name} is the bomb.com`)
+    .map(capitalize);
+    console.table(gameGroup);
+
+    // const orderTotalsWithTax = orderTotals.map(total => 1); // Using total => 1 will change the original array into all ones. You can still acces the original array (orderTotals) before it was changed. 
+    // console.log(orderTotalsWithTax);
+
+    const orderTotalsWithTax = orderTotals.map(total => total * 1.13); // This is turning the total of the new array into each total * 1.13.
+    // console.log(orderTotalsWithTax);
+
+    // function attachBody(face, body) {
+    //   return `
+    //         ${face}
+    //       ${body.repeat(3)}
+    //       ${Array(3).fill(body).join(' ')}
+    // 　 👇🏽　 ${body.repeat(2)}　👇🏽
+    //       ${Array(2).fill(body).join('   ')}
+    //       ${Array(2).fill(body).join('   ')}
+    // 　　   👢　　👢
+    //       `
+    //     }
+
+    //     faces.map(face => attachBody(face, '🍟')).forEach(body => console.log(body))
+  // Use console.dir to see the different methods you can do with dates. 
+    const cleanPeople = people.map(function(person) {
+      // timestamp
+      const birthday = new Date(person.birthday).getTime(); 
+      // now timestamp
+      const now = Date.now();
+      const age = Math.floor((now - birthday) / 31536000000);
+      // get their birthday
+
+      // figure out how old they are
+      // return their full name and bday in an object. 
+
+      return {
+        age,
+        name: `${person.names.first} ${person.names.last}`,
+      } 
+    });
+
+      console.table(cleanPeople)
+      const over40 = cleanPeople.filter(person => // implicent statement
+      person.age > 40);
+    
+    console.table(cleanPeople)
+
+    // console.table(cleanPeople);
+// Putting in date without a parameter will give current date.  when reporting
+      // getTime is the amount of milliseconds since January 1, 1970. This is used to calculate what day is it based on the milliseconds. 
+
+
+ </script>
 </body>
 
 </html>
