--- a/playground/types/types.html
+++ b/playground/types/types.html
@@ -2,13 +2,29 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title></title>
-  <link rel="stylesheet" href="../base.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="../base.css">
 </head>
 
 <body>
+
+    <script type="text/javascript" src="./booleans-equality-types.js"></script>
+
+    <script type="text/javascript" src="./string-types.js"></script>
+
+    <script type="text/javascript" src="./number-types.js"></script>
+
+    <script type="text/javascript" src="./object-types.js"></script>
+
+    <script type="text/javascript" src="./null-undefined-types.js"></script>
+
+    <script type="text/javascript" src="./practice.js"></script>
+
+
+
+
 
 </body>
 
