--- a/exercises/59 - Slider/index.html
+++ b/exercises/59 - Slider/index.html
@@ -52,7 +52,7 @@
     </div>
 
   </div>
-  <script src="./src/index.js"></script>
+  <script src="./src/index.prototype-start.js"></script>
 </body>
 
 </html>
