--- a/playground/events/event-loop.html
+++ b/playground/events/event-loop.html
@@ -5,12 +5,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Event Loop</title>
-  <link rel="stylesheet" href="../base.css">
+  <link rel="stylesheet" href="../../base.css">
 </head>
 
 <body>
+  <style>
+    .go {
+      margin: 5rem;
+      background: white;
+      padding: 5rem;
+      width: 25rem;
+      height: 25rem;
+      transition: all 0.2s;
+    }
+    .go.circle {
+      border-radius: 50%;
+    }
+  </style>
+  <div class="go">Click Me</div>
   <script>
+    // Look up video Phil Roberts What the heck is the event loop anyway. HE also made a tool called Loupe
+    // in js you can only run one thing at a time, this is called single threaded
+    // function after running the last line. This will cause the code to be out of order. 
 
+    // console.log('Starting');  
+    // setTimeout(function () {
+    //   console.log('Running');
+    // }, 2000);
+    // console.log('Ending')
+
+    /*
+    Callstack is what js is doing, Web APIs are things that are waiting or listening for, 
+    Callback queue is where it goes after finishing in the api (like a timer or button), 
+    the callstack grabs anything in the queue when it has nothing left to do. 
+    */
+
+    const go = document.querySelector('.go');
+    // 1. Change the text to GO when clicked. 
+    go.addEventListener('click', function(e) {
+      const el = e.currentTarget;
+      el.textContent = 'GO!'
+      // 2. make it a circle after 2 seconds.  
+      setTimeout(function() {
+        el.classList.add('circle');
+        // 3. make red after 0.5s
+      }, 2000);
+    });
+    
+    
+    // make it square 0.25s
+    // make it purple after 0.3s
+    // fade out after 0.5s
+    // Finish!
   </script>
 </body>
 
